--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,29 +1,32 @@
 name: Deploy-To-Firebase
 
-on: 
+on:
   push:
-    branches: 
-      - main
+    branches:
+      - main  # Set a branch to deploy
+  pull_request:
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  deploy:
+    runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@master
-        submodules: true  # Fetch Hugo themes (true OR recursive)
-        fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-    - name: Use Node.js 16.14
-      uses: actions/setup-node@master
-      with:
-        node-version: 16.14    
-    - name: Install dependencies
-      run: npm install
-    - name: Build
-      run: hugo
-    - uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - uses: actions/checkout@v4
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: '0.135.0'
+          # extended: true
+
+      - name: Build
+        run: hugo
+
+      - name: Deploy
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
